@@ -191,6 +191,7 @@ delete_breakpoints
 proc test_single_step { always_inserted auto_hw } {
     global gdb_prompt
     global decimal
+    global hex
     global supports_hbreak
     global hw_step
 
@@ -215,11 +216,11 @@ proc test_single_step { always_inserted auto_hw } {
 	    gdb_assert {!$hw_step && $auto_hw == "off"} \
 		"$test (cannot insert sw break)"
 	}
-	-re "^si\r\nNote: automatically using hardware breakpoints for read-only addresses\.\r\n${decimal}\[ \t\]+i = 0;\r\n$gdb_prompt $" {
+	-re "^si\r\nNote: automatically using hardware breakpoints for read-only addresses\.\r\n\(\?\:${hex}\[ \t\]\)\?${decimal}\[ \t\]+i = 0;\r\n$gdb_prompt $" {
 	    gdb_assert {!$hw_step && $auto_hw == "on" && $supports_hbreak} \
 		"$test (auto-hw)"
 	}
-	-re "^si\r\n${decimal}\[ \t\]+i = 0;\r\n$gdb_prompt $" {
+	-re "^si\r\n\(\?\:${hex}\[ \t\]\)\?${decimal}\[ \t\]+i = 0;\r\n$gdb_prompt $" {
 	    gdb_assert {$hw_step || ($auto_hw == "on" && $supports_hbreak)} \
 		"$test (no error)"
 	}
